--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
         <div>
           <p class="quote-content">
             This is an inspiring quote, or a testimonal from a customer. Maybe
-            it;s just filling up space, or maybe people will actually raed it.
+            it's just filling up space, or maybe people will actually raed it.
             Who knows? All I know is that it looks nice
           </p>
           <p class="quote-author">-Thor, God of Thunder</p>
