--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
           <div>Header Logo</div>
         </div>
         <ul class="header links">
-          <li><a href="">Header Link One</a></li>
-          <li><a href="">Header Link Two</a></li>
-          <li><a href="">Header Link Three</a></li>
+          <li class="link"><a href="">Header Link One</a></li>
+          <li class="link"><a href="">Header Link Two</a></li>
+          <li class="link"><a href="">Header Link Three</a></li>
         </ul>
       </div>
       <div class="intro">
@@ -46,7 +46,7 @@
           </div>
           <div class="card">
             <div class="card-image"></div>
-            <div clas-="card text">
+            <div class="card text">
               this is some subtext under an illustration or image
             </div>
           </div>
@@ -67,23 +67,23 @@
       <div class="quote">
         <div>
           <p class="quote-content">
-            This is an inspiring quote, or a testimonal from a customer. Maybe
-            it's just filling up space, or maybe people will actually raed it.
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
             Who knows? All I know is that it looks nice
           </p>
           <p class="quote-author">-Thor, God of Thunder</p>
         </div>
       </div>
       <div class="register">
-        <div>
+        <div class="register-container">
           <div>
-            <p>Call to action! It's time!</p>
-            <p>
+            <p class="register-header">Call to action! It's time!</p>
+            <p class="register-subtext">
               Sign up for our product by clicking that button right over there!
             </p>
           </div>
-          <div>
-            <button>Sign Up</button>
+          <div class="register-button">
+            <div><button class="register-btn">Sign Up</button></div>
           </div>
         </div>
       </div>
